fixed top color contrast issue

--- a/src/views/Browse/Top/Top.scss
+++ b/src/views/Browse/Top/Top.scss
@@ -27,6 +27,9 @@
 			flex-direction: column;
 			font-size: 1.2rem;
 		}
+		a {
+			@include nav-theme($light-theme: true);
+		}
 
 		.interests-left {
 			width: 49%;
@@ -38,7 +41,7 @@
 
 			a .interest {
 				width: 31%;
-				background-color: $silver-lining;
+				// background-color: $silver-lining;
 				padding: 10px;
 				border-radius: 0 3px 3px 0;
 				@media #{$tablet} {
@@ -54,11 +57,6 @@
 
 				@media #{$tablet} {
 					padding: 15px;
-				}
-				a {
-					div {
-						@include nav-theme($light-theme: true);
-					}
 				}
 			}
 
@@ -105,9 +103,11 @@
 .dark-mode {
 	.interest {
 		background-color: $darkness;
-
-		.inner-interest {
-			@include nav-theme($light-theme: false);
+	}
+	.interests {
+		color: $black-void;
+		a {
+			@include nav-types($anchor-color: $blue-valentine, $hover-color: $luigi, $visit-color: $ruby-enchantment);
 		}
 	}
 }
